--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,7 @@ hr {
   gap: 0.5em;
   font-size: var(--_size);
   text-align: left;
+  margin-top: 1rem;
 }
 
 .wrapper {
@@ -190,7 +191,7 @@ hr {
   gap: 0.2em;
 }
 
-.label {
+.wrapper .label {
   text-transform: uppercase;
   font-size: 0.7em;
   pointer-events: none;
@@ -317,7 +318,7 @@ header a:visited {
   gap: var(--taskgroup-gap);
 }
 
-.label {
+.task-group .label {
   position: relative;
   cursor: pointer;
   text-align: left;
